<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentLogin"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd= "8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputLoginName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/loginName"
            android:inputType="textPersonName"
            app:errorEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width= "match_parent"
        android:layout_height= "wrap_content"
        android:layout_marginEnd= "8dp"
        android:layout_marginStart= "8dp"
        android:layout_marginTop= "8dp"
        app:layout_constraintEnd_toEndOf= "parent"
        app:layout_constraintStart_toStartOf= "parent"
        app:layout_constraintTop_toTopOf= "parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:errorEnabled="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/ok"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/butCanc"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/Cancel"
             />
    </LinearLayout>
</LinearLayout>